--- a/Kompendium.html
+++ b/Kompendium.html
@@ -114,10 +114,11 @@
     <div id="header">Kompendium Grafiki Komputerowej</div>
     <div id="nav">
         <ul>
+             <li><a href="index.html">Grafika Wektorowa</a></li>
             <li><a href="Wektorowa.html">Grafika Wektorowa</a></li>
             <li><a href="Rastrowa.html">Grafika Rastrowa</a></li>
             <li><a href="Trójwymiar.html">Trójwymiar</a></li>
-            <li><a href="Kompendium.html">Kompendium</a></li>
+          
         </ul>
     </div>
 
