--- a/Wektorowa.html
+++ b/Wektorowa.html
@@ -16,7 +16,7 @@
             font-family: 'Poppins', sans-serif;
             background-color: #2b3a42;
             color: #f5f5f5;
-            line-height: 1.7;
+            line-height: 1.3;
             font-size: 18px;
             display: flex;
             flex-direction: column;
@@ -144,6 +144,23 @@
             <p>Zalety grafiki wektorowej: Grafika wektorowa umożliwia tworzenie skalowalnych, precyzyjnych obrazów o małej objętości pliku, które zachowują wysoką jakość bez utraty detali przy zmianie rozmiaru.
             <br><br>
                 Wady grafiki wektorowej: Grafika wektorowa nie nadaje się do przedstawiania złożonych, fotorealistycznych obrazów, takich jak zdjęcia, ponieważ nie potrafi odwzorować subtelnych przejść kolorów i detali.</p>
+            h2>Programy do grafiki wektorowej</h2>
+            <ul>
+                <li>Adobe Illustrator</li>
+                <li>CorelDRAW</li>
+                <li>Inkscape</li>
+                <li>Affinity Designer</li>
+                <li>Gravit Designer</li>
+            </ul>
+
+<h2>Popularne rozszerzenia plików wektorowych</h2>
+<ul>
+    <li><strong>.SVG</strong> – format używany w grafice webowej, obsługujący skalowanie bez utraty jakości.</li>
+    <li><strong>.AI</strong> – natywny format Adobe Illustrator.</li>
+    <li><strong>.EPS</strong> – format używany w druku i grafice profesjonalnej.</li>
+    <li><strong>.PDF</strong> – obsługuje grafikę wektorową i rastrową, często używany w dokumentach.</li>
+    <li><strong>.CDR</strong> – natywny format CorelDRAW.</li>
+</ul>
         </div>
 
         <div class="image">
