--- a/Wektorowa.html
+++ b/Wektorowa.html
@@ -144,8 +144,9 @@
             <p>Zalety grafiki wektorowej: Grafika wektorowa umożliwia tworzenie skalowalnych, precyzyjnych obrazów o małej objętości pliku, które zachowują wysoką jakość bez utraty detali przy zmianie rozmiaru.
             <br><br>
                 Wady grafiki wektorowej: Grafika wektorowa nie nadaje się do przedstawiania złożonych, fotorealistycznych obrazów, takich jak zdjęcia, ponieważ nie potrafi odwzorować subtelnych przejść kolorów i detali.</p>
-            h2>Programy do grafiki wektorowej</h2>
-            <ul>
+             <ul>
+            <h2>Programy do edycji grafiki wektorowej</h2>
+            
                 <li>Adobe Illustrator</li>
                 <li>CorelDRAW</li>
                 <li>Inkscape</li>
