--- a/Rastrowa.html
+++ b/Rastrowa.html
@@ -116,7 +116,7 @@
         <ul> <li><a href="index.html">Grafika komputerowa</a></li>
             <li><a href="Wektorowa.html">Grafika Wektorowa</a></li>
             <li><a href="Trójwymiar.html">Trójwymiar</a></li>
-            <li><a href="Kompendium.html">Kompendium</a></li>
+            <li><a href="Kom.html">Kompendium</a></li>
         </ul>
     </div>
 
