--- a/Trójwymiar.html
+++ b/Trójwymiar.html
@@ -115,7 +115,7 @@
         <ul> <li><a href="index.html">Grafika komputerowa</a></li>
             <li><a href="Wektorowa.html">Grafika Wektorowa</a></li>
             <li><a href="Rastrowa.html">Grafika Rastrowa</a></li>
-            <li><a href="Kompendium.html">Kompendium</a></li>
+            <li><a href="Kom.html">Kompendium</a></li>
         </ul>
     </div>
 
