--- a/Wektorowa.html
+++ b/Wektorowa.html
@@ -113,7 +113,7 @@
             <li><a href="index.html">Grafika Komputerowa</a></li>
             <li><a href="Rastrowa.html">Grafika Rastrowa</a></li>
             <li><a href="Trójwymiar.html">Trójwymiar</a></li>
-            <li><a href="Kompendium.html">Kompendium</a></li>
+            <li><a href="Kom.html">Kompendium</a></li>
         </ul>
     </div>
 
